--- a/source/tgui.css
+++ b/source/tgui.css
@@ -24,13 +24,13 @@
 
 .tgui-tooltip
 {
+	display: none;
 	left: 1px;
-	top: 3px;
+	top: 25px;
 	background-color: #eec;
 	color: #000;
 	font-family: sans-serif;
 	font-size: 9pt;
-	opacity: 0;
 	position: absolute;
 	transition: opacity 0.5s;
 	padding: 2px;
@@ -42,7 +42,7 @@
 
 .tgui-control:hover .tgui-tooltip
 {
-	opacity: 1;
+	display: block;
 }
 
 .tgui-label
