--- a/source/tgui.css
+++ b/source/tgui.css
@@ -25,19 +25,30 @@
 .tgui-tooltip
 {
 	display: none;
-	left: 1px;
-	top: 25px;
 	background-color: #eec;
 	color: #000;
 	font-family: sans-serif;
 	font-size: 9pt;
-	position: absolute;
 	transition: opacity 0.5s;
 	padding: 2px;
 	border: 1px solid #000;
 	border-radius: 3px;
 	white-space: nowrap;
 	z-index: 10;
+}
+
+.tgui-tooltip-left
+{
+	position: absolute;
+	left: 1px;
+	top: 25px;
+}
+
+.tgui-tooltip-right
+{
+	position: absolute;
+	right: 1px;
+	top: 25px;
 }
 
 .tgui-control:hover .tgui-tooltip
