--- a/distribution/tscript.css
+++ b/distribution/tscript.css
@@ -794,7 +794,7 @@ button {
 {
 	margin: 10px 10px 10px 10px;
 	padding: 0 10px 0 10px;
-	width: 18%;
+	width: calc(100% - 20px);
 	height: 30px;
 	vertical-align: middle;
 	background: #eee;
