--- a/distribution/tscript.css
+++ b/distribution/tscript.css
@@ -488,17 +488,37 @@ span.CodeMirror-selectedtext { background: none; }
 	border-width: 1px;
 	border-style: solid;
 	border-color: #fff #555 #555 #fff;
+	
+	border-color: #eee;
+	box-shadow: 0px 1px 2px rgba(0.9,0.9,0.9,0.2);
+	border-radius: 1px;
+	
+	/*border-color: #ddd #bbb #bbb #ccc;
+	box-shadow: inset 0px  1px 0px #ffffff80,
+	            inset 0px -1px 0px rgba(0,0,0,0.1);*/
 }
 
 .tgui-button-canvas:hover
 {
 	background: #bbb;
+	
+	
+	/*border-color: #ddd;*/
+	/*box-shadow: 0px 0px 2px #fff;*/
+	/*background: #fff;*/
+	
+	background: #eee;
+	border-color: #fff;
 }
 
 .tgui-button-canvas:active
 {
 	background: #bbb;
-	border-color: #222 #777 #777 #222;
+	/*border-color: #222 #777 #777 #222;*/
+	
+	
+	border-color: #888;
+	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.2);
 }
 
 
@@ -510,6 +530,8 @@ span.CodeMirror-selectedtext { background: none; }
 	background: #eee;
 	border-width: 1px;
 	box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
+	
+	border-radius: 2px;
 }
 .tgui-dialog-button:focus
 {
@@ -521,7 +543,7 @@ span.CodeMirror-selectedtext { background: none; }
 {
 	background: #fff;
 	border-width: 2px;
-	box-shadow: 0px 0px 0px rgba(0,0,0,0.2);
+	/*box-shadow: 0px 0px 0px rgba(0,0,0,0.2);*/
 }
 
 .tgui-dialog-button:active
@@ -625,6 +647,11 @@ span.CodeMirror-selectedtext { background: none; }
 	box-sizing: border-box;
 }
 
+/* TODO: use this class on only floating panels */
+.tgui-panel-float {
+	box-shadow: 0px 1px 8px rgba(0,0,0,0.2);
+}
+
 .tgui-panel-titlebar {
 	position: absolute;
 	width: 100%;
@@ -635,7 +662,8 @@ span.CodeMirror-selectedtext { background: none; }
 	top: 0;
 	background: #00c;
 	color: #fff;
-	font-family: sans;
+	font-family: sans-serif;
+	/*old style on browsers like firefox: font-family: serif; -- "sans" does not work and leads to "serif"*/
 	font-size: 12pt;
 
 	-webkit-touch-callout: none;
@@ -648,11 +676,10 @@ span.CodeMirror-selectedtext { background: none; }
 
 .tgui-panel-dockbutton {
 	float: right;
-	margin: 0;
 	padding: 0;
 	width: 20px;
 	height: 20px;
-	margin: 1px 0;
+	margin: 1px 0 1px 1px;
 }
 
 .tgui-panel-content {
