Fixed and improved floating panels
- whenever a floating panel was changed to another state and back to floating state, the interact-draggable of the panel was added another time, leading to twice(thrice, etc...) the movement, when the panel was dragged: the fix: instead of interact(panel).draggable(false), interact(panel).unset() clears all installed interact event handlers of a control
- removed inertia from dragging floating panels
- added shadow to floating panels, better visibility when multiple blank panels appear ontop of each other
- a floating panel is now moved to the top of the panel stack, when it is clicked upon

--- a/source/tgui.css
+++ b/source/tgui.css
@@ -150,6 +150,7 @@
 	
 	background: #eee;
 	border-width: 1px;
+	border-color: #000;
 	box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
 	
 	border-radius: 2px;
@@ -174,6 +175,7 @@
 	box-shadow: inset 0px 0px 3px rgba(0,0,0,0.4);
 }
 
+/* used in file dialog */
 .tgui-status-box
 {
 	background: #eee;
@@ -289,9 +291,9 @@
 	box-sizing: border-box;
 }
 
-/* TODO: use this class on only floating panels */
+/* this class is additionaly used for floating panels */
 .tgui-panel-float {
-	box-shadow: 0px 1px 8px rgba(0,0,0,0.2);
+	box-shadow: 0px 1px 8px #00000030;
 }
 
 .tgui-panel-titlebar {
