--- a/source/ide.css
+++ b/source/ide.css
@@ -64,6 +64,7 @@ button {
 	min-height: 300px;
 	background: #aaa;
 	overflow: hidden;
+	box-shadow: inset 0px 1px 8px #00000020;
 }
 
 .ide-toolbar {
@@ -72,7 +73,7 @@ button {
 	background: #ccc;
 	color: #000;
 	border-bottom: #888 solid 1px;
-	box-shadow: inset 0px -1px 0px #aaa;
+	box-shadow: inset 0px -1px 0px #ddd;
 	box-sizing: border-box;
 }
 
