--- a/distribution/tscript.css
+++ b/distribution/tscript.css
@@ -463,8 +463,8 @@ span.CodeMirror-selectedtext { background: none; }
 	border-style: solid;
 	border-color: #999;
 
-	box-shadow: inset 0px  1px 2px #00000040,
-				inset 0px -1px 0px #ffffff50;
+	box-shadow: inset 0px  1px 4px #00000030,
+				inset 0px -1px 4px #ffffff50;
 	
 	text-align: center;
 	padding: 2px 10px 2px 10px;
@@ -525,7 +525,8 @@ span.CodeMirror-selectedtext { background: none; }
 {
 	background: #bbb;	
 	border-color: #888;
-	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.2);
+	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.2),
+				0px 0px 1px 1px #ffffff20;
 }
 
 
@@ -536,6 +537,7 @@ span.CodeMirror-selectedtext { background: none; }
 	
 	background: #eee;
 	border-width: 1px;
+	border-color: #000;
 	box-shadow: 0px 1px 3px rgba(0,0,0,0.2);
 	
 	border-radius: 2px;
@@ -550,7 +552,6 @@ span.CodeMirror-selectedtext { background: none; }
 {
 	background: #fff;
 	border-width: 2px;
-	/*box-shadow: 0px 0px 0px rgba(0,0,0,0.2);*/
 }
 
 .tgui-dialog-button:active
@@ -560,15 +561,12 @@ span.CodeMirror-selectedtext { background: none; }
 	box-shadow: inset 0px 0px 3px rgba(0,0,0,0.4);
 }
 
+/* used in file dialog */
 .tgui-status-box
 {
 	background: #eee;
 	
 	font-size: 10pt;
-	
-	/*border-width: 1px;
-	border-style: solid;
-	border-color: #555 #fff #fff #555;*/
 	
 	padding: 4px
 }
@@ -658,16 +656,59 @@ span.CodeMirror-selectedtext { background: none; }
 
 .tgui-modal
 {
-	position: fixed;
+	position: absolute;
+	margin: auto;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	
 	box-sizing: border-box;
 	background: #fff;
 	color: #000;
 	font-family: sans-serif;
-	font-size: 12pt;
+	font-size: 10pt;
 	padding: 10px;
 	border: 5px solid #888;
 	overflow-y: scroll;
 }
+
+.tgui-modal-titlebar {
+	
+	display: flex;
+	flex-direction: row;
+	
+	background: #008;
+	color: #fff;
+	padding: 2px 2px 2px 10px;
+	
+	font-weight: bold;
+	font-size: 10pt;
+	line-height: 24px;
+	user-select: none;
+}
+
+.tgui-modal-titlebar-title {
+	flex: auto;
+	color: #fff;
+	font-family: sans-serif;
+	vertical-align: middle;
+	padding: 2px;
+	height: 100%;
+	width: auto;
+}
+
+.tgui-modal-content
+{
+	position: absolute;
+	left: 0;
+	top: 24px;
+	width: 100%;
+	height: calc(100% - 24px)
+}
+
+
+
 
 .tgui-panel-container {
 	overflow: hidden;
@@ -675,24 +716,30 @@ span.CodeMirror-selectedtext { background: none; }
 	box-sizing: border-box;
 }
 
-/* TODO: use this class on only floating panels */
+/* this class is additionaly used for floating panels */
 .tgui-panel-float {
-	box-shadow: 0px 1px 8px rgba(0,0,0,0.2);
+	box-shadow: 0px 1px 8px #00000030,
+				0px 0px 0px 1px #00000020;
 }
 
 .tgui-panel-titlebar {
+	display: flex;
+	flex-direction: row;
+	
 	position: absolute;
 	width: 100%;
 	height: 22px;
 	line-height: 22px;
-	padding: 0 1px 0 10px;
+	padding: 1px;
 	left: 0;
 	top: 0;
 	background: #00c;
 	color: #fff;
 	font-family: sans-serif;
 	/*old style on browsers like firefox: font-family: serif; -- "sans" does not work and leads to "serif"*/
-	font-size: 12pt;
+	/*font-size: 12pt;*/
+	font-weight: 600;
+	font-size: 10pt;
 
 	-webkit-touch-callout: none;
 	-webkit-user-select: none;
@@ -702,12 +749,21 @@ span.CodeMirror-selectedtext { background: none; }
 	user-select: none;
 }
 
+.tgui-panel-titlebar-title {
+	flex: auto;
+	color: #fff;
+	font-family: sans-serif;
+	vertical-align: middle;
+	padding: 1px;
+	height: 100%;
+	width: auto;
+}
+
 .tgui-panel-dockbutton {
-	float: right;
 	padding: 0;
 	width: 20px;
 	height: 20px;
-	margin: 1px 0 1px 1px;
+	margin: 0 0 0 1px;
 }
 
 .tgui-panel-content {
@@ -786,6 +842,7 @@ button {
 	min-height: 300px;
 	background: #aaa;
 	overflow: hidden;
+	box-shadow: inset 0px 1px 8px #00000020;
 }
 
 .ide-toolbar {
@@ -794,7 +851,7 @@ button {
 	background: #ccc;
 	color: #000;
 	border-bottom: #888 solid 1px;
-	box-shadow: inset 0px -1px 0px #aaa;
+	box-shadow: inset 0px -1px 0px #ddd;
 	box-sizing: border-box;
 }
 
