--- a/distribution/tscript.css
+++ b/distribution/tscript.css
@@ -509,9 +509,10 @@ span.CodeMirror-selectedtext { background: none; }
 
 	border-width: 1px;
 	border-style: solid;
-	
 	border-color: #eee;
+	
 	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+	
 	border-radius: 1.5px;
 }
 
@@ -686,6 +687,9 @@ span.CodeMirror-selectedtext { background: none; }
 	font-size: 10pt;
 	line-height: 24px;
 	user-select: none;
+	
+	/*box-shadow: inset -1px -1px 3px -2px #000000ff,
+				inset  1px  1px 3px -2px #00ccffff;*/
 }
 
 .tgui-modal-titlebar-title {
@@ -718,8 +722,10 @@ span.CodeMirror-selectedtext { background: none; }
 
 /* this class is additionaly used for floating panels */
 .tgui-panel-float {
-	box-shadow: 0px 1px 8px #00000030,
+	box-shadow: 0px 1px 8px #00000050,
 				0px 0px 0px 1px #00000020;
+				
+	/*border-radius: 2px;*/
 }
 
 .tgui-panel-titlebar {
@@ -747,6 +753,11 @@ span.CodeMirror-selectedtext { background: none; }
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	
+	
+	
+	/*box-shadow: inset -1px -1px 3px -2px #000000ff,
+				inset  1px  1px 3px -2px #00ffffff;*/
 }
 
 .tgui-panel-titlebar-title {
@@ -764,6 +775,25 @@ span.CodeMirror-selectedtext { background: none; }
 	width: 20px;
 	height: 20px;
 	margin: 0 0 0 1px;
+	
+	
+
+	background: #ddd;
+
+	border-width: 1px;
+	border-style: solid;
+	border-color: #eee #ccc #ccc #eee;
+	
+	box-shadow: inset -1px -1px 2px -2px #00000050,
+				inset  1px  1px 2px -2px #fffffff0;
+	
+	border-radius: 1.5px;
+}
+.tgui-panel-dockbutton:active {
+	background: #bbb;	
+	border-color: #ccc; /*#47f;*/
+	box-shadow: inset 0px 0px 5px -2px #00000080,
+				inset 1px 1px 1px -1px #00000080;
 }
 
 .tgui-panel-content {
@@ -842,7 +872,7 @@ button {
 	min-height: 300px;
 	background: #aaa;
 	overflow: hidden;
-	box-shadow: inset 0px 1px 8px #00000020;
+	box-shadow: inset 0px 1px 8px #00000030;
 }
 
 .ide-toolbar {
