--- a/src/ide/css/tgui.css
+++ b/src/ide/css/tgui.css
@@ -1,14 +1,11 @@
-
-.tgui
-{
+.tgui {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	box-sizing: border-box;
 }
 
-.tgui-control
-{
+.tgui-control {
 	font-family: sans-serif;
 	font-size: 10pt;
 	color: #000;
@@ -18,13 +15,11 @@
 	margin: 3px calc(min(3px, max(0.5px, calc(0.5vw - 3px)))); /* TODO: only for toolbar items */
 }
 
-.tgui-hidden
-{
+.tgui-hidden {
 	display: none;
 }
 
-.tgui-tooltip
-{
+.tgui-tooltip {
 	display: none;
 	background-color: #eec;
 	color: #000;
@@ -38,62 +33,54 @@
 	z-index: 10;
 }
 
-.tgui-tooltip-left
-{
+.tgui-tooltip-left {
 	position: absolute;
 	left: 1px;
 	top: 25px;
 }
 
-.tgui-tooltip-right
-{
+.tgui-tooltip-right {
 	position: absolute;
 	right: 1px;
 	top: 25px;
 }
 
-.tgui-control:hover .tgui-tooltip
-{
+.tgui-control:hover .tgui-tooltip {
 	display: block;
 }
 
-.tgui-toolbar-separator
-{
+.tgui-toolbar-separator {
 	float: left;
 	width: 1px;
 	height: 22px;
 	background: #999;
 	margin: 3px calc(min(10px, max(1.5px, calc(1vw - 3px)))); /* TODO: only for toolbar items */
-	
+
 	box-shadow: 0px 1px 2px #ffffff80;
 }
 
 /* used for program status on the toolbar */
-.tgui-label
-{
+.tgui-label {
 	background: #ccc;
-	box-shadow: inset 0px  1px 4px #00000030,
-				inset 0px -1px 4px #ffffff50,
-				0px 0px 1px 0px #000000a0,
-				0px 2px 1px 0px #ffffffc0;
-	
+	box-shadow: inset 0px 1px 4px #00000030, inset 0px -1px 4px #ffffff50,
+		0px 0px 1px 0px #000000a0, 0px 2px 1px 0px #ffffffc0;
+
 	text-align: center;
 	vertical-align: middle;
 	padding: 2px 10px 2px 10px;
 	border-radius: 1px;
 }
 
-.tgui-button-text
-{
+.tgui-button-text {
 	cursor: pointer;
 
 	background: #ddd;
 
 	border-width: 1px;
 	border-style: solid;
-	
+
 	border-color: #eee;
-	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 	border-radius: 1.5px;
 
 	text-align: center;
@@ -101,26 +88,22 @@
 	padding: 2px 10px 2px 10px;
 }
 
-.tgui-button-text:hover
-{
+.tgui-button-text:hover {
 	background: #eee;
 	border-color: #fff;
 }
 
-.tgui-button-text:focus
-{
+.tgui-button-text:focus {
 	border-color: #222;
 }
 
-.tgui-button-text:active
-{
-	background: #bbb;	
+.tgui-button-text:active {
+	background: #bbb;
 	border-color: #888;
-	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.2);
+	box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2);
 }
 
-.tgui-button-canvas
-{
+.tgui-button-canvas {
 	cursor: pointer;
 
 	background: #ddd;
@@ -128,41 +111,34 @@
 	border-width: 1px;
 	border-style: solid;
 	border-color: #eee;
-	
-	box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
-	
+
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+
 	border-radius: 1.5px;
 }
 
-.tgui-button-canvas:hover
-{
+.tgui-button-canvas:hover {
 	background: #eee;
 	border-color: #fff;
 }
 
-.tgui-button-canvas:focus
-{
+.tgui-button-canvas:focus {
 	border-color: #222;
 }
 
-.tgui-button-canvas:active
-{
-	background: #bbb;	
+.tgui-button-canvas:active {
+	background: #bbb;
 	border-color: #888;
-	box-shadow: inset 0px 0px 2px rgba(0,0,0,0.2),
-				0px 0px 1px 1px #ffffff20;
+	box-shadow: inset 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 1px 1px #ffffff20;
 }
 
-
 /* used in file dialog */
-.tgui-status-box
-{
+.tgui-status-box {
 	vertical-align: middle;
 	padding: 4px;
 }
 
-.tgui-list-box
-{
+.tgui-list-box {
 	box-shadow: 0px 0px 2px #00000030;
 	border-radius: 2px;
 	border-style: solid;
@@ -171,9 +147,7 @@
 	padding: 3px;
 }
 
-
-.tgui-text-box
-{
+.tgui-text-box {
 	box-shadow: 0px 0px 2px #00000030;
 	border-radius: 2px;
 	border-style: solid;
@@ -182,8 +156,7 @@
 	padding: 0 0 0 3px;
 }
 
-.tgui-tree
-{
+.tgui-tree {
 	width: 100%;
 	height: 100%;
 	font-family: monospace;
@@ -192,47 +165,39 @@
 	overflow: scroll;
 }
 
-.tgui-tree-main
-{
+.tgui-tree-main {
 	border-collapse: collapse;
 }
 
-.tgui-tree-cell-toggle
-{
+.tgui-tree-cell-toggle {
 	display: block;
 	width: 15px;
 }
 
-.tgui-tree-cell-content
-{
+.tgui-tree-cell-content {
 	width: calc(100% - 15px);
 	white-space: nowrap;
 }
 
-.tgui-tree-toggle
-{
+.tgui-tree-toggle {
 	vertical-align: middle;
 	padding-right: 3px;
 	color: #999;
 	transition: color 0.5s;
 }
 
-.tgui-tree-toggle:hover
-{
+.tgui-tree-toggle:hover {
 	color: #000;
 }
 
-.tgui-tree-element
-{
+.tgui-tree-element {
 }
 
-.tgui-tree-element:hover
-{
+.tgui-tree-element:hover {
 	background: #cdf;
 }
 
-.tgui-separator
-{
+.tgui-separator {
 	display: block;
 	position: fixed;
 	left: 0vw;
@@ -243,9 +208,8 @@
 	background: rgba(64, 64, 64, 0.8);
 }
 
-.tgui-modal
-{
-	position: absolute;	
+.tgui-modal {
+	position: absolute;
 	box-sizing: border-box;
 	color: #000;
 	font-family: sans-serif;
@@ -255,14 +219,13 @@
 }
 
 .tgui-modal-titlebar {
-	
 	display: flex;
 	flex-direction: row;
-	
+
 	background: #008;
 	color: #fff;
 	padding: 2px 2px 2px 10px;
-	
+
 	font-weight: bold;
 	font-size: 10pt;
 	user-select: none;
@@ -276,8 +239,7 @@
 	width: auto;
 }
 
-.tgui-modal-content
-{
+.tgui-modal-content {
 	background: #eee;
 	position: absolute;
 	overflow: auto;
@@ -288,80 +250,72 @@
 	/*height: calc(100% - 24px);*/
 }
 
-.tgui-modal-buttonbar
-{
+.tgui-modal-buttonbar {
 	position: absolute;
-	box-shadow: inset 0px  2px 3px -1px #00000040;
+	box-shadow: inset 0px 2px 3px -1px #00000040;
 	/*background: #0000ff60; /**/
 	background: #e5e5e5;
-	width: 100%; height: 39px;
+	width: 100%;
+	height: 39px;
 	padding: 7px 0px;
-	bottom: 0px; 
-	display: flex; justify-content: flex-end;
+	bottom: 0px;
+	display: flex;
+	justify-content: flex-end;
 }
 
-
-.tgui-modal-button
-{
+.tgui-modal-button {
 	cursor: pointer;
-	
+
 	background: #eee;
 	border-width: 1px;
 	border-color: #000;
 	box-shadow: 0px 1px 3px #00000033;
-	
+
 	border-radius: 2px;
 	color: #000;
 }
-.tgui-modal-button:focus
-{
+.tgui-modal-button:focus {
 	background: #eee;
 	border-width: 2px;
 }
 
-.tgui-modal-button:hover
-{
+.tgui-modal-button:hover {
 	background: #fff;
 	border-width: 2px;
 }
 
-.tgui-modal-button:active
-{
+.tgui-modal-button:active {
 	background: #bbb;
 	border-width: 2px;
 	box-shadow: inset 0px 0px 3px #00000066;
 	color: #000;
 }
 
-.tgui-modal-default-button
-{
+.tgui-modal-default-button {
 	cursor: pointer;
-	
+
 	font-weight: bold;
-	
+
 	background: #16f;
 	border-width: 1px;
 	border-color: #04d;
 	box-shadow: 0px 1px 3px #00000033;
-	
+
 	border-radius: 2px;
 	color: #fff;
 }
-.tgui-modal-default-button:focus
-{	
+.tgui-modal-default-button:focus {
 	background: #16f;
 	border-width: 2px;
 	border-color: #027;
 }
 
-.tgui-modal-default-button:hover
-{
+.tgui-modal-default-button:hover {
 	background: #27f;
 	border-width: 2px;
 }
 
-.tgui-modal-default-button:active
-{
+.tgui-modal-default-button:active {
 	background: #139;
 	border-width: 2px;
 	border-color: #000;
@@ -376,14 +330,13 @@
 
 /* this class is additionaly used for floating panels */
 .tgui-panel-float {
-	box-shadow: 0px 1px 8px #00000050,
-				0px 0px 0px 1px #00000020;
+	box-shadow: 0px 1px 8px #00000050, 0px 0px 0px 1px #00000020;
 }
 
 .tgui-panel-titlebar {
 	display: flex;
 	flex-direction: row;
-	
+
 	position: absolute;
 	width: 100%;
 	height: 22px;
@@ -407,8 +360,7 @@
 	user-select: none;
 }
 
-.tgui-panel-titlebar-icon
-{
+.tgui-panel-titlebar-icon {
 	margin-right: 1px;
 }
 
@@ -427,18 +379,16 @@
 	width: 20px;
 	height: 20px;
 	margin: 0 0 0 1px;
-	
-	
 
 	background: #ddd;
 
 	border-width: 1px;
 	border-style: solid;
 	border-color: #eee #ccc #ccc #eee;
-	
+
 	box-shadow: inset -1px -1px 2px -2px #00000050,
-				inset  1px  1px 2px -2px #fffffff0;
-	
+		inset 1px 1px 2px -2px #fffffff0;
+
 	border-radius: 1.5px;
 }
 
@@ -448,11 +398,11 @@
 }
 
 .tgui-panel-dockbutton:active {
-	background: #bbb;	
+	background: #bbb;
 	border-color: #777;
 	background-clip: padding-box;
-	box-shadow: inset 1px  0px 3px -1px #00000040,
-				inset 0px  2px 3px -1px #00000040;
+	box-shadow: inset 1px 0px 3px -1px #00000040,
+		inset 0px 2px 3px -1px #00000040;
 }
 
 .tgui-panel-content {
