--- a/src/ide/css/ide.css
+++ b/src/ide/css/ide.css
@@ -146,7 +146,7 @@ button {
 
 .ide-tutorial {
 	overflow-y: auto;
-	background: #f8f8f8;
+	background: #fff4e8;
 	width: 100%;
 	height: 100%;
 	padding: 15px;
