--- a/src/ide/css/tutorial.css
+++ b/src/ide/css/tutorial.css
@@ -26,3 +26,15 @@
 	cursor: pointer;
 	padding: 5px 0;
 }
+
+.code-evaluation th {
+	padding: 5px 10px;
+	background: #468;
+	color: #fff;
+}
+
+.code-evaluation td {
+	padding: 5px 10px;
+	background: #fed;
+	border: 1px solid #aaa;
+}
