--- a/src/ide/css/ide.css
+++ b/src/ide/css/ide.css
@@ -144,6 +144,18 @@ button {
 	height: 100%;
 }
 
+.ide-tutorial {
+	overflow-y: auto;
+	background: #fff4e8;
+	width: 100%;
+	height: 100%;
+	padding: 15px;
+	font-family: sans-serif;
+	font-size: 11pt;
+	line-height: 140%;
+	color: #000;
+}
+
 .ide-index {
 	color: #00f;
 }
