--- a/src/ide/css-dark/tgui.css
+++ b/src/ide/css-dark/tgui.css
@@ -16,20 +16,21 @@ body.dark-theme *.tgui-tooltip {
 }
 
 body.dark-theme *.tgui-toolbar-separator {
-	background: #444;
-	box-shadow: 0px 1px 2px #00000080;
+	background: #393939;
+	box-shadow: 0px 1px 2px #00000040;
 }
 
 /* used for program status on the toolbar */
 /* TODO: create separate css classes for the different states */
 body.dark-theme *.tgui-label {
-	color: #000;
+	background: #222;
+	box-shadow: inset 0px 1px 4px #00000030, inset 0px -1px 4px #00000050,
+		0px 0px 1px 0px #000000a0, 0px 2px 1px 0px #ffffff18;
 }
 
 body.dark-theme *.tgui-button-text {
-
 	color: #fff;
-	background: #333;
+	background: #373737;
 	border-color: #444;
 }
 
@@ -48,7 +49,7 @@ body.dark-theme *.tgui-button-text:active {
 }
 
 body.dark-theme *.tgui-button-canvas {
-	background: #333;
+	background: #373737;
 	border-color: #444;
 }
 
@@ -126,7 +127,7 @@ body.dark-theme *.tgui-modal-button:focus {
 }
 
 body.dark-theme *.tgui-modal-button:hover {
-	background: #447;
+	background: #346;
 }
 
 body.dark-theme *.tgui-modal-button:active {
@@ -163,19 +164,26 @@ body.dark-theme *.tgui-panel-titlebar-title {
 }
 
 /* .tgui-panel-dockbutton is also used in modal dialogs */
-/*body.dark-theme *.tgui-panel-dockbutton {
-	background: #ddd;
-	border-color: #eee #ccc #ccc #eee;
+body.dark-theme *.tgui-panel-dockbutton {
+	background: #333;
+	border-color: #444 #393939 #393939 #444;
+	box-shadow: none;
 }
 
 body.dark-theme *.tgui-panel-dockbutton:focus {
 	border-color: #77f;
 }
 
+body.dark-theme *.tgui-panel-dockbutton:hover {
+	background: #444;
+}
+
 body.dark-theme *.tgui-panel-dockbutton:active {
-	background: #bbb;
-	border-color: #777;
-}*/
+	background: #222;
+	border-color: #666;
+	box-shadow: inset 1px 0px 3px -1px #00000040,
+		inset 0px 2px 3px -1px #00000040;
+}
 
 body.dark-theme *.tgui-panel-content {
 	background: #222;
