Refactoring, Fixes - renamed 'event' field to 'events' in description objects, it seems   that this was not used anywere - changed toolbar creation - changed/updated the documentation of tgui.createElement - removed 'attributes' again, using 'properties' instead - some css tweaking

--- a/src/ide/css-dark/documentation.css
+++ b/src/ide/css-dark/documentation.css
@@ -125,7 +125,7 @@ body.dark-theme *.example {
 
 body.dark-theme *.warning {
 	border-color: #c66;
-	background: #fcc;
+	background: #633;
 }
 
 body.dark-theme *.keyword {
