--- a/src/ide/css-dark/ide.css
+++ b/src/ide/css-dark/ide.css
@@ -48,31 +48,26 @@ body.dark-theme *.ide-errormessage {
 }
 
 body.dark-theme *.ide-program-ancestor {
-	background: #863;
+	color: #fc6;
+	background: #653;
 }
 
 body.dark-theme *.ide-program-current {
-	background: #653;
+	color: #fc6;
+	background: #863;
 }
 
 body.dark-theme *.ide-turtle {
 	background: #333;
 }
 
-.ide-tutorial {
-	overflow-y: auto;
-	background: #fff4e8;
-	width: 100%;
-	height: 100%;
-	padding: 15px;
-	font-family: sans-serif;
-	font-size: 11pt;
-	line-height: 140%;
-	color: #000;
+body.dark-theme *.ide-tutorial {
+	background: #222;
+	color: #fff;
 }
 
 body.dark-theme *.ide-index {
-	color: #44f;
+	color: #26f;
 }
 
 body.dark-theme *.ide-integer {
