--- a/src/ide/css-dark/tgui.css
+++ b/src/ide/css-dark/tgui.css
@@ -45,7 +45,8 @@ body.dark-theme *.tgui-button-text:focus {
 
 body.dark-theme *.tgui-button-text:active {
 	background: #222;
-	border-color: #fff;
+	border-color: #000;
+	box-shadow: inset 0px 0px 2px #000;
 }
 
 body.dark-theme *.tgui-button-canvas {
@@ -64,7 +65,8 @@ body.dark-theme *.tgui-button-canvas:focus {
 
 body.dark-theme *.tgui-button-canvas:active {
 	background: #222;
-	border-color: #fff;
+	border-color: #000;
+	box-shadow: inset 0px 0px 2px #000;
 }
 
 body.dark-theme *.tgui-list-box {
@@ -154,10 +156,10 @@ body.dark-theme *.tgui-modal-default-button:active {
 	border-color: #27f;
 }
 
-body.dark-theme *.tgui-modal-content select {
-	background: #222;
-	border: #777;
+body.dark-theme *.tgui-modal-dropdown {
 	color: #fff;
+	background-color: #222;
+	border-color: #444;
 }
 
 body.dark-theme *.tgui-panel-titlebar {
@@ -186,7 +188,7 @@ body.dark-theme *.tgui-panel-dockbutton:hover {
 
 body.dark-theme *.tgui-panel-dockbutton:active {
 	background: #222;
-	border-color: #666;
+	border-color: #000;
 	box-shadow: inset 1px 0px 3px -1px #00000040,
 		inset 0px 2px 3px -1px #00000040;
 }
